# misurazione-del-tempo-di-reazione-di-una-persona

./: .gitignore  README.md
ReactionSpeed/: CMakeLists.txt  Images.qrc  LightCanvas.qml  Main.qml  ScoreTable.qml  Shaders.qrc  TimingPanel.qml  lights.frag  macros.h  main.cpp  mainlogic.cpp  mainlogic.h  mainlogicworker.cpp  mainlogicworker.h  precompiled_header.h  savePanel.qml  savemanager.cpp  savemanager.h
ReactionSpeed/Basic/: CMakeLists.txt  SCheckBox.qml  SReloadButton.qml  SSpinBox.qml  SText.qml  STextEdit.qml
backup/receiver/: functions.ino  receiver.ino
backup/sender/: sender.ino
getMacAddress/: getMacAddress.ino
receiver/: comunicationMacros.h  functions.ino  receiver.ino
sender/: functions.ino  sender.ino
